--- a/backend/sidedish/src/main/resources/application.properties
+++ b/backend/sidedish/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://13.209.36.131:3306/sidedish
+spring.datasource.url=jdbc:mysql://localhost:3306/sidedish
 # MySQL 설정
 spring.datasource.username=team07
 spring.datasource.password=1234
@@ -6,5 +6,3 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
 logging.level.sql=debug
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
-
